# nohang-tr

./: .gitignore  AGENTS.md  CMakeLists.txt  Doxyfile  README.md  apt-packages.txt  install.sh  pacman-packages.txt  plan.md  uninstall.sh  update.sh
.github/workflows/: ci.yml
cmake/: FindAyatanaAppIndicator3.cmake
config/: nohang-tr.example.toml
res/: nohang-tr.desktop
scripts/: maintain_codex.sh  setup_codex.sh
src/: CMakeLists.txt  config.cpp  config.h  main.cpp  system_probe.cpp  system_probe.h  tray.cpp  tray.h
tests/: CMakeLists.txt  test_config.cpp  test_config_path.cpp  test_system_probe.cpp  test_tray.cpp
